--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
   "dependencies": {
     "@nuxt/content": "^1.2.0",
     "@nuxtjs/axios": "^5.3.6",
-    "nuxt": "^2.0.0"
+    "markdown-it": "^11.0.0",
+    "nuxt": "^2.0.0",
+    "remark-emoji": "^2.1.0",
+    "remark-highlight.js": "^6.0.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.0.0",
+    "@fec/remark-a11y-emoji": "^1.0.0",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/markdownit-loader": "^1.1.1",
+    "@nuxtjs/vuetify": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1"
   }
