--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxt/content": "^1.2.0",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/google-adsense": "^1.1.3",
     "markdown-it": "^11.0.0",
     "nuxt": "^2.0.0",
     "remark-emoji": "^2.1.0",
