--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "material-design-icons-iconfont": "^5.0.1",
     "prettier": "^1.19.1",
+    "vue-friendly-iframe": "^0.18.0",
     "vue-particles": "^1.0.9"
   }
 }
