--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@nuxt/content": "^1.2.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-adsense": "^1.1.3",
+    "file-loader": "^6.1.1",
     "markdown-it": "^11.0.0",
     "nuxt": "^2.0.0",
     "remark-emoji": "^2.1.0",
     "remark-highlight.js": "^6.0.0",
+    "vue-pdf": "^4.2.0",
     "vue-typer": "^1.2.0"
   },
   "devDependencies": {
